Fix BTC acronym spacing

--- a/app/assets/css/wallet/top-menu.less
+++ b/app/assets/css/wallet/top-menu.less
@@ -117,7 +117,6 @@
         font-weight: @font-weight-light;
         font-size: @font-size-small;
         letter-spacing: -0px;
-        padding-left: 5px;
       }
 
     }
